--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,11 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - name: Build and Push Docker Image to Docker Repo
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: derkm/ci-cd-app
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASS }}
+        dockerfile: Dockerfile 
